--- a/static/css/navigation.css
+++ b/static/css/navigation.css
@@ -44,7 +44,7 @@ body {
     margin: 0;
     position: sticky;
     top: 0;
-    z-index: 100;
+    z-index: 1050;
 }
 
 .navbar-container {
